# SistemaSolar

./: CMakeLists.txt  LICENSE  README.md  TODO.md  index.html  ssolar.js  url.md
assets/: main.cpp  simple.fs  simple.vs  simple2.fs  simple2.vs  simple3.vs  ssolar.csv
assets/shaders/: main.cpp  orbit.fs  orbit.vs  planet.fs  planet.vs  stars.vs
src/: astro.cpp  astro.h  astrosconfig.h  camera.h  csv.cpp  csv.h  error.cpp  error.h  main.cpp  pch.h  shaders.cpp  shaders.h  texture.cpp  texture.h  vao.cpp  vao.h
